--- a/test.css
+++ b/test.css
@@ -1,7 +1,17 @@
 body {
-    background: black;
+    background-color: black !important;
+    padding:10px !important;
+   padding-bottom:60px !important; 
   }
   
+  footer {
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:60px;   /* Height of the footer */
+    background-color: transparent !important;
+ }
+
   .wrapper {
     position: absolute;
     overflow: hidden;
@@ -81,6 +91,8 @@ body {
     overflow: hidden;
     padding: 10px;
   }
+
+  /* * { outline: solid 0.25rem hsla(210, 100%, 100%, 0.5); } */
   
   .blurred-box:after{
     align-content: center;
